# Waveguide

./: .PreconditionSweeping.h.kate-swp  .cproject  .gitattributes  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Doxyfile  ExactSolution.cpp  ExactSolution.h  FileLogger.cpp  FileLogger.h  FileLoggerData.cpp  FileLoggerData.h  GRTAGS  GTAGS  GradientTable.cpp  GradientTable.h  Installations  Job_hc3_211453.err  Job_hc3_211453.out  Job_hc3_211604.err  Job_hc3_211604.out  Job_hc3_211611.err  Job_hc3_211611.out  Job_hc3_211612.err  Job_hc3_211612.out  Job_hc3_211617.err  Job_hc3_211617.out  Job_hc3_211619.err  Job_hc3_211619.out  Job_hc3_211620.err  Job_hc3_211620.out  Job_hc3_211625.err  Job_hc3_211625.out  Job_hc3_211631.err  Job_hc3_211631.out  Job_hc3_211632.err  Job_hc3_211632.out  Job_hc3_211704.err  (+102 more)
Code/: CMakeLists.txt  MainpageDoku.dox
Code/BoundaryCondition/: BoundaryCondition.cpp  BoundaryCondition.h  DirichletSurface.cpp  DirichletSurface.h  DofData.cpp  DofData.h  EmptySurface.cpp  EmptySurface.h  HSIEPolynomial.cpp  HSIEPolynomial.h  HSIESurface.cpp  HSIESurface.h  JacobianForCell.cpp  JacobianForCell.h  LaguerreFunction.cpp  LaguerreFunction.h  NeighborSurface.cpp  NeighborSurface.h  PMLMeshTransformation.cpp  PMLMeshTransformation.h  PMLSurface.cpp  PMLSurface.h
Code/Core/: AuxiliaryProblem.cpp  AuxiliaryProblem.h  DOFManager.cpp  DOFManager.h  Enums.h  FEDomain.cpp  FEDomain.h  GlobalObjects.cpp  GlobalObjects.h  InnerDomain.cpp  InnerDomain.h  MainProblem.cpp  MainProblem.h  NumericProblem.cpp  NumericProblem.h  PreconditionerSweeping.cpp  PreconditionerSweeping.h  Sector.cpp  Sector.h  Simulation.cpp  Simulation.h  SolutionWeight.cpp  SolutionWeight.h  Types.h  Waveguide.cpp  Waveguide.h  WaveguideStructure.cpp  WaveguideStructure.h
Code/GlobalObjects/: GeometryManager.cpp  GeometryManager.h  GlobalObjects.cpp  GlobalObjects.h  ModeManager.cpp  ModeManager.h  OutputManager.cpp  OutputManager.h  TimerManager.cpp  TimerManager.h
Code/HSIE/: FaceSurfaceComparator.cpp  FaceSurfaceComparator.h  FaceSurfaceComparatorZ.cpp  FaceSurfaceComparatorZ.h  HSIEDofType.cpp  HSIEDofType.h  HSIE_Preconditioner_Base.cpp  HSIE_Preconditioner_Base.h
Code/HSIEPreconditioner/: DofData.cpp  DofData.h  HSIEPolynomial.cpp  HSIEPolynomial.h  HSIEPreconditioner.cpp  HSIEPreconditioner.h  HSIESurface.cpp  HSIESurface.h  JacobianForCell.cpp  JacobianForCell.h  LaguerreFunction.cpp  LaguerreFunction.h
Code/Helpers/: Enums.h  ExactSolution.cpp  ExactSolution.h  ExactSolutionRamped.cpp  ExactSolutionRamped.h  Geometry.cpp  Geometry.h  GeometryManager.cpp  GeometryManager.h  ModeManager.cpp  ModeManager.h  OutputManager.cpp  OutputManager.h  ParameterOverride.cpp  ParameterOverride.h  ParameterReader.cpp  ParameterReader.h  Parameters.cpp  Parameters.h  PointSourceField.cpp  PointSourceField.h  PointVal.cpp  PointVal.h  QuadratureFormulaCircle.cpp  ShapeDescription.cpp  ShapeDescription.h  Structs.h  staticfunctions.cpp  staticfunctions.h
Code/Hierarchy/: DofIndexData.cpp  DofIndexData.h  HierarchicalProblem.cpp  HierarchicalProblem.h  LevelDofIndexData.cpp  LevelDofIndexData.h  LocalProblem.cpp  LocalProblem.h  MPICommunicator.cpp  MPICommunicator.h  NonLocalProblem.cpp  NonLocalProblem.h  temp.cpp
Code/MeshGenerators/: MeshGenerator.cpp  MeshGenerator.h  RoundMeshGenerator.cpp  RoundMeshGenerator.h  SquareMeshGenerator.cpp  SquareMeshGenerator.h
Code/ModalComputations/: RectangularMode.cpp  RectangularMode.h
Code/Optimization/: ShapeFunction.cpp  ShapeFunction.h
Code/OptimizationAlgorithm/: Optimization1D.cpp  Optimization1D.h  OptimizationAlgorithm.cpp  OptimizationAlgorithm.h  OptimizationCG.cpp  OptimizationCG.h  OptimizationSteepestDescent.cpp  OptimizationSteepestDescent.h
Code/OptimizationStrategies/: AdjointOptimization.cpp  AdjointOptimization.h  FDOptimization.cpp  FDOptimization.h  Optimization.cpp  Optimization.h
Code/OutputGenerators/Console/: CoreLogger.h  GradientTable.cpp  GradientTable.h
Code/OutputGenerators/Files/: FileLogger.cpp  FileLogger.h
Code/OutputGenerators/Images/: ConvergenceOutputGenerator.cpp  ConvergenceOutputGenerator.h  ResidualOutputGenerator.cpp  ResidualOutputGenerator.h
Code/OutputGenerators/Multimedia/: FileLogger.cpp  FileLogger.h  FileLoggerData.h
Code/Runners/: ConvergenceRun.cpp  ConvergenceRun.h  OptimizationRun.cpp  OptimizationRun.h  ParameterSweep.cpp  ParameterSweep.h  Simulation.cpp  Simulation.h  SingleCoreRun.cpp  SingleCoreRun.h  SweepingRun.cpp  SweepingRun.h
Code/Solutions/: AngledExactSolution.cpp  AngledExactSolution.h  ExactSolution.cpp  ExactSolution.h  ExactSolutionConjugate.cpp  ExactSolutionConjugate.h  ExactSolutionRamped.cpp  ExactSolutionRamped.h  PMLTransformedExactSolution.cpp  PMLTransformedExactSolution.h
Code/SpaceTransformations/: AngleWaveguideTransformation.cpp  AngleWaveguideTransformation.h  BendTransformation.cpp  BendTransformation.h  DualProblemTransformationWrapper.cpp  DualProblemTransformationWrapper.h  HomogenousTransformation.cpp  HomogenousTransformationCircular.cpp  HomogenousTransformationCircular.h  HomogenousTransformationRectangular.cpp  HomogenousTransformationRectangular.h  InhomogenousTransformationCircle.h  InhomogenousTransformationCircular.cpp  InhomogenousTransformationCircular.h  InhomogenousTransformationRectangular.cpp  InhomogenousTransformationRectangular.h  PredefinedShapeTransformation.cpp  PredefinedShapeTransformation.h  SpaceTransformation.cpp  SpaceTransformation.h  WaveguideTransformation.cpp  WaveguideTransformation.h
Documentation/: Doxyfile  MainpageDoku.dox
Doxygen/: Doxyfile  MainpageDoku.dox
Main/: CMakeLists.txt  latest  main.cpp
Modes/: .~lock.test.csv#  InterpolateShape.m  Results.ods  merge_eims.py  openfigure.m  run_all_server.sh  test - Kopie.csv  (+5 more)
googletest/: CMakeLists.txt  ExampleTest.cpp  Google_tests.cbp  test_detail.xml  test_detail.xml.html
googletest/lib/: googletest-distribution.cbp
googletest/lib/googlemock/: gmock.cbp
googletest/lib/googletest/: gtest.cbp
googletest/lib/googletest/docs/: advanced.md  primer.md
(+721 files in other folders)
