INCLUDE_DIRECTORIES(Core, Helpers, MeshGenerators, OptimizationAlgorithm, OptimizationStrategies, SpaceTransformations, HSIEPreconditioner)

ADD_LIBRARY(Code
        Core/Sector.cpp
        Core/FEDomain.cpp
        Core/InnerDomain.cpp
        Core/Types.h
        Runners/Simulation.cpp
        Runners/ConvergenceRun.cpp
        Runners/ParameterSweep.cpp
        Runners/SingleCoreRun.cpp
        Runners/OptimizationRun.cpp
        Runners/SweepingRun.cpp
        Helpers/ParameterOverride.cpp
        Helpers/ParameterReader.cpp
        Helpers/PointSourceField.cpp
        Helpers/Parameters.cpp
        Helpers/PointVal.cpp
        Helpers/QuadratureFormulaCircle.cpp
        Helpers/staticfunctions.cpp
        Helpers/ShapeDescription.cpp
        Solutions/ExactSolution.cpp
        Solutions/AngledExactSolution.cpp
        Solutions/ExactSolutionRamped.cpp
        Solutions/ExactSolutionConjugate.cpp
        Solutions/PMLTransformedExactSolution.cpp
        MeshGenerators/SquareMeshGenerator.cpp
        SpaceTransformations/DualProblemTransformationWrapper.cpp
        SpaceTransformations/HomogenousTransformationRectangular.cpp
        SpaceTransformations/InhomogenousTransformationRectangular.cpp
        SpaceTransformations/BendTransformation.cpp
        SpaceTransformations/AngleWaveguideTransformation.cpp
        SpaceTransformations/SpaceTransformation.cpp
        BoundaryCondition/JacobianForCell.cpp
        BoundaryCondition/DofData.cpp
        BoundaryCondition/BoundaryCondition.cpp
        BoundaryCondition/PMLSurface.cpp
        BoundaryCondition/PMLMeshTransformation.cpp
        BoundaryCondition/HSIEPolynomial.cpp
        BoundaryCondition/HSIESurface.cpp
        BoundaryCondition/NeighborSurface.cpp
        BoundaryCondition/EmptySurface.cpp
        BoundaryCondition/DirichletSurface.cpp
        BoundaryCondition/LaguerreFunction.cpp
        BoundaryCondition/JacobianForCell.cpp
        Hierarchy/HierarchicalProblem.cpp  
        Hierarchy/NonLocalProblem.cpp  
        Hierarchy/LocalProblem.cpp
        Hierarchy/MPICommunicator.cpp
        Hierarchy/DofIndexData.cpp
        Hierarchy/LevelDofIndexData.cpp
        ModalComputations/RectangularMode.cpp
        GlobalObjects/GeometryManager.cpp
        GlobalObjects/TimerManager.cpp
        GlobalObjects/GlobalObjects.cpp
        GlobalObjects/ModeManager.cpp
        GlobalObjects/OutputManager.cpp
        OutputGenerators/Images/ResidualOutputGenerator.cpp
        OutputGenerators/Images/ConvergenceOutputGenerator.cpp
        )

DEAL_II_SETUP_TARGET(Code)
